[package]
name = "code-mosaic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.22.0"
image = { version = "0.23", features = ["jpeg", "png"] }
silicon = "0.4.3"
syntect = "4.6.0"
tokio = {version="1.18.0",features= ["full"]}
tree-sitter = "0.20.6"
tree-sitter-c = "0.20.1"
tree-sitter-rust = "0.20.1"
deltae = "0.3.0"
lab = "0.11.0"
